# pokemon_predict

./: CMakeLists.txt  readme.md
include/: mobilenet.h
install/Pokemon_Predict_demo/: Pokemon_Predict
model/: mobilenet.rknn  synset.txt
src/: luckfox_mpi.cc  main.cc  mobilenet_rv1106_1103.cc
tft/: readme.md  rv1103g-luckfox-pico-mini.dts
